# csa-lab3

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml  test.yml
.github/workfows/: python.yml
examples/: cat  cat_output  factorial  factorial_output  prob2  prob2_output
src/: exceptions.py  golden_test.py
src/computer/: alu.py  computer.py  control_unit.py  controls.py  machine.py  memory.py
src/golden/: cat.yml  factorial.yml  prob2.yml
src/language/: instruction.py  translator.py
